GNOME Bugzilla – Bug 707406
Totem git master fails to start on Weston
Last modified: 2013-09-18 23:26:44 UTC
It fails to start if gstreamer-vaapi is present. If I remove gstreamer-vaapi, it starts fine and plays video in seperate window. libEGL warning: failed to create a pipe screen for i965 libEGL warning: failed to create DRM screen libva info: VA-API version 0.34.0 libva info: va_getDriverName() returns 0 libva info: Trying to open /usr/lib/dri/i965_drv_video.so libva info: Found init function __vaDriverInit_0_34 libva info: va_openDriver() returns 0 (totem:14930): Clutter-CRITICAL **: The Clutter backend is not a X11 backend (totem:14930): Clutter-CRITICAL **: The Clutter backend is not a X11 backend Segmentation fault (core dumped) Backtrace here: 0x00007ffff708a2b3 in clutter_gst_hw_init_pixmap (buffer=0x7fff9c0599a0, surface=0x7fff9400b288, sink=0x78d370) at ./clutter-gst-video-sink.c:1135 1135 ./clutter-gst-video-sink.c: No such file or directory. (gdb) bt
+ Trace 232448
Created attachment 255111 [details] [review] hw: fix crash when running on Wayland with X11 backend compiled
It would probably help with using 2 different backends. Sadly we don't have the code path to deal with wayland yet, so you will probably get a blank screen.
I am still having problems with latest clutter-gst and totem. Core dump occours if gstreamer-vaapi is installed. A backtrace is a bit different, but it still shows hw_decoder_init or something like that. I suggest for now to disable hardware decoder init on non x11 platforms.